add download links for episodes

--- a/_posts/2021-05-22-hc36.md
+++ b/_posts/2021-05-22-hc36.md
@@ -5,6 +5,8 @@ date:   2021-05-22 22:00:00 +0200
 categories: home-clubbing
 thumb: img/hc36.jpg
 ---
+[--> Download <--](https://mega.nz/file/SWgyHTJZ#d8NT2WqxM28oUroFuTua_hYgpDJKa1LOepcoxsxjZ8g){:target="_blank" class="dl-button"}
+
 <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2FHBz_Archive%2F22052021-hbz-home-clubbing-36-s03e06%2F" frameborder="0" ></iframe>
 
 <iframe scrolling="no" id="hearthis_at_track_5938758" width="100%" height="150" src="https://app.hearthis.at/embed/5938758/transparent_black/?hcolor=&color=&style=2&block_size=2&block_space=1&background=1&waveform=0&cover=0&autoplay=0&css=" frameborder="0" allowtransparency allow="autoplay"><p>Listen to <a href="https://hearthis.at/hbzarchive/hc36/" target="_blank">HBz Home Clubbing #36 (S03E06)</a> <span>by</span><a href="https://hearthis.at/hbzarchive/" target="_blank" >HBz_Archive</a> <span>on</span> <a href="https://hearthis.at/" target="_blank">hearthis.at</a></p></iframe>
