--- a/_posts/2021-04-17-hc31.md
+++ b/_posts/2021-04-17-hc31.md
@@ -5,6 +5,8 @@ date:   2021-04-17 22:00:00 +0200
 categories: home-clubbing
 thumb: img/hc31.jpg
 ---
+[--> Download <--](https://mega.nz/file/LOgyFD4a#eyoH4n_Ahn2ENpS4-AH0Zi4wfbkj5HCz-FcOhrpjU50){:target="_blank" class="dl-button"}
+
 <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2FHBz_Archive%2F17042021-hbz-home-clubbing-s03e01-hc31%2F" frameborder="0" ></iframe>
 
 <iframe scrolling="no" id="hearthis_at_track_5861332" width="100%" height="150" src="https://app.hearthis.at/embed/5861332/transparent_black/?hcolor=&color=&style=2&block_size=2&block_space=1&background=1&waveform=0&cover=0&autoplay=0&css=" frameborder="0" allowtransparency allow="autoplay"><p>Listen to <a href="https://hearthis.at/hbzarchive/hc31/" target="_blank">HBz Home Clubbing #31 (S03E01)</a> <span>by</span><a href="https://hearthis.at/hbzarchive/" target="_blank" >HBz_Archive</a> <span>on</span> <a href="https://hearthis.at/" target="_blank">hearthis.at</a></p></iframe>
