--- a/_posts/2021-05-29-hc37.md
+++ b/_posts/2021-05-29-hc37.md
@@ -5,6 +5,8 @@ date:   2021-05-29 22:00:00 +0200
 categories: home-clubbing
 thumb: img/hc37.jpg
 ---
+[--> Download <--](https://mega.nz/file/CD50gbwI#WKonjFkTJrc60NTYmaH0Sh5aplcOwwAOZNKqEsRprKU){:target="_blank" class="dl-button"}
+
 <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2FHBz_Archive%2F29052021-hbz-home-clubbing-37-s03e07%2F" frameborder="0" ></iframe>
 
 <iframe scrolling="no" id="hearthis_at_track_5953861" width="100%" height="150" src="https://app.hearthis.at/embed/5953861/transparent_black/?hcolor=&color=&style=2&block_size=2&block_space=1&background=1&waveform=0&cover=0&autoplay=0&css=" frameborder="0" allowtransparency allow="autoplay"><p>Listen to <a href="https://hearthis.at/hbzarchive/hc37/" target="_blank">HBz Home Clubbing #37 (S03E07)</a> <span>by</span><a href="https://hearthis.at/hbzarchive/" target="_blank" >HBz_Archive</a> <span>on</span> <a href="https://hearthis.at/" target="_blank">hearthis.at</a></p></iframe>
