--- a/_posts/2021-06-05-hc38.md
+++ b/_posts/2021-06-05-hc38.md
@@ -5,6 +5,8 @@ date:   2021-06-05 22:00:00 +0200
 categories: home-clubbing
 thumb: img/hc38.jpg
 ---
+[--> Download <--](https://mega.nz/file/uaog0DrL#NvsZ_18tB0Rt-7m9UVHdoTkqF7ZF2qqlfkcaIksT14E){:target="_blank" class="dl-button"}
+
 <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2FHBz_Archive%2F05062021-hbz-home-clubbing-38-s03e08%2F" frameborder="0" ></iframe>
 
 <iframe scrolling="no" id="hearthis_at_track_5975658" width="100%" height="150" src="https://app.hearthis.at/embed/5975658/transparent_black/?hcolor=&color=&style=2&block_size=2&block_space=1&background=1&waveform=0&cover=0&autoplay=0&css=" frameborder="0" allowtransparency allow="autoplay"><p>Listen to <a href="https://hearthis.at/hbzarchive/hc38/" target="_blank"> HBz Home Clubbing #38 (S03E08)</a> <span>by</span><a href="https://hearthis.at/hbzarchive/" target="_blank" >HBz_Archive</a> <span>on</span> <a href="https://hearthis.at/" target="_blank">hearthis.at</a></p></iframe>
