add more dl links and images

--- a/_posts/2021-04-24-hc32.md
+++ b/_posts/2021-04-24-hc32.md
@@ -5,8 +5,11 @@ date:   2021-04-24 22:00:00 +0200
 categories: home-clubbing
 thumb: img/hc32.jpg
 ---
-[--> Download <--](https://mega.nz/file/zGhkgZRD#Q2F8h3h9lbSFdb6TXcf28gnJ89IKsW618PNAKDXX_DY){:target="_blank" class="dl-button"}
+<h1>Download</h1>
+[MEGA](https://mega.nz/file/zGhkgZRD#Q2F8h3h9lbSFdb6TXcf28gnJ89IKsW618PNAKDXX_DY){:target="_blank" class="dl-button mega"}
+[UPLOADED](http://ul.to/0lr6pfnq){:target="_blank" class="dl-button ul"}
 
+<h1>Stream</h1>
 <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2FHBz_Archive%2F24042021-hbz-home-clubbing-s03e02-hc32%2F" frameborder="0" ></iframe>
 
 <iframe scrolling="no" id="hearthis_at_track_5861382" width="100%" height="150" src="https://app.hearthis.at/embed/5861382/transparent_black/?hcolor=&color=&style=2&block_size=2&block_space=1&background=1&waveform=0&cover=0&autoplay=0&css=" frameborder="0" allowtransparency allow="autoplay"><p>Listen to <a href="https://hearthis.at/hbzarchive/hc32/" target="_blank">HBz Home Clubbing #32 (S03E02)</a> <span>by</span><a href="https://hearthis.at/hbzarchive/" target="_blank" >HBz_Archive</a> <span>on</span> <a href="https://hearthis.at/" target="_blank">hearthis.at</a></p></iframe>
