--- a/_posts/2021-06-12-hc39.md
+++ b/_posts/2021-06-12-hc39.md
@@ -5,8 +5,11 @@ date:   2021-06-12 22:00:00 +0200
 categories: home-clubbing
 thumb: img/hc39.jpg
 ---
-[--> Download <--](https://mega.nz/file/WDxGEbSQ#c8Jr30eFf7REQAqr0RQKDwp5IeMM_XxxfhQzVMQu1Gc){:target="_blank" class="dl-button"}
+<h1>Download</h1>
+[MEGA](https://mega.nz/file/WDxGEbSQ#c8Jr30eFf7REQAqr0RQKDwp5IeMM_XxxfhQzVMQu1Gc){:target="_blank" class="dl-button mega"}
+[UPLOADED](http://ul.to/i95actsx){:target="_blank" class="dl-button ul"}
 
+<h1>Stream</h1>
 <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2FHBz_Archive%2F12062021-hbz-home-clubbing-39-s03e09%2F" frameborder="0" ></iframe>
 
 <iframe scrolling="no" id="hearthis_at_track_5992841" width="100%" height="150" src="https://app.hearthis.at/embed/5992841/transparent_black/?hcolor=&color=&style=2&block_size=2&block_space=1&background=1&waveform=0&cover=0&autoplay=0&css=" frameborder="0" allowtransparency allow="autoplay"><p>Listen to <a href="https://hearthis.at/hbzarchive/hc39/" target="_blank">HBz Home Clubbing #39 (S03E09)</a> <span>by</span><a href="https://hearthis.at/hbzarchive/" target="_blank" >HBz_Archive</a> <span>on</span> <a href="https://hearthis.at/" target="_blank">hearthis.at</a></p></iframe>
