--- a/_posts/2021-05-08-hc34.md
+++ b/_posts/2021-05-08-hc34.md
@@ -5,8 +5,11 @@ date:   2021-05-08 22:00:00 +0200
 categories: home-clubbing
 thumb: img/hc34.jpg
 ---
-[--> Download <--](https://mega.nz/file/aToyEbKD#I_TqCxZj8saE9XFjIZgUBUZ1KK9qLCDzhp-pdWefxF8){:target="_blank" class="dl-button"}
+<h1>Download</h1>
+[MEGA](https://mega.nz/file/aToyEbKD#I_TqCxZj8saE9XFjIZgUBUZ1KK9qLCDzhp-pdWefxF8){:target="_blank" class="dl-button mega"}
+[UPLOADED](http://ul.to/vjhmeh5i){:target="_blank" class="dl-button ul"}
 
+<h1>Stream</h1>
 <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2FHBz_Archive%2F08052021-hbz-home-clubbing-34-s03e04%2F" frameborder="0" ></iframe>
 
 <iframe scrolling="no" id="hearthis_at_track_5899677" width="100%" height="150" src="https://app.hearthis.at/embed/5899677/transparent_black/?hcolor=&color=&style=2&block_size=2&block_space=1&background=1&waveform=0&cover=0&autoplay=0&css=" frameborder="0" allowtransparency allow="autoplay"><p>Listen to <a href="https://hearthis.at/hbzarchive/hc34/" target="_blank">HBz Home Clubbing #34 (S03E04)</a> <span>by</span><a href="https://hearthis.at/hbzarchive/" target="_blank" >HBz_Archive</a> <span>on</span> <a href="https://hearthis.at/" target="_blank">hearthis.at</a></p></iframe>
