--- a/_posts/2021-04-24-hc32.md
+++ b/_posts/2021-04-24-hc32.md
@@ -14,8 +14,8 @@ thumb: img/hc32.jpg
 
 <iframe scrolling="no" id="hearthis_at_track_5861382" width="100%" height="150" src="https://app.hearthis.at/embed/5861382/transparent_black/?hcolor=&color=&style=2&block_size=2&block_space=1&background=1&waveform=0&cover=0&autoplay=0&css=" frameborder="0" allowtransparency allow="autoplay"><p>Listen to <a href="https://hearthis.at/hbzarchive/hc32/" target="_blank">HBz Home Clubbing #32 (S03E02)</a> <span>by</span><a href="https://hearthis.at/hbzarchive/" target="_blank" >HBz_Archive</a> <span>on</span> <a href="https://hearthis.at/" target="_blank">hearthis.at</a></p></iframe>
 
-<iframe id="lbry-iframe" width="560" height="315" src="https://odysee.com/$/embed/hc32/a1cfeb281b3be6a5ab08c00996a7362010b005a0?r=DgzV1r6o8wsmEEG4g96yVhvmv6p27qo2" allowfullscreen></iframe>
+<iframe id="lbry-iframe" width="100%" height="auto" src="https://odysee.com/$/embed/hc32/a1cfeb281b3be6a5ab08c00996a7362010b005a0?r=DgzV1r6o8wsmEEG4g96yVhvmv6p27qo2" allowfullscreen></iframe>
 
-<iframe src="https://vivo.sx/embed/2a959a29d2" width="560" height="315" scrolling="no" frameborder="0" allowfullscreen></iframe>
+<iframe src="https://vivo.sx/embed/2a959a29d2" width="100%" height="auto" scrolling="no" frameborder="0" allowfullscreen></iframe>
 
-<iframe src="https://voe.sx/e/ozdjrzkolpme" width="560" height="315" scrolling="no" frameborder="0" allowfullscreen></iframe>
+<iframe src="https://voe.sx/e/ozdjrzkolpme" width="100%" height="auto" scrolling="no" frameborder="0" allowfullscreen></iframe>
