--- a/_posts/2021-05-01-hc33.md
+++ b/_posts/2021-05-01-hc33.md
@@ -14,8 +14,8 @@ thumb: img/hc33.jpg
 
 <iframe scrolling="no" id="hearthis_at_track_5879842" width="100%" height="150" src="https://app.hearthis.at/embed/5879842/transparent_black/?hcolor=&color=&style=2&block_size=2&block_space=1&background=1&waveform=0&cover=0&autoplay=0&css=" frameborder="0" allowtransparency allow="autoplay"><p>Listen to <a href="https://hearthis.at/hbzarchive/hc33/" target="_blank">HBz Home Clubbing #33 (S03E03)</a> <span>by</span><a href="https://hearthis.at/hbzarchive/" target="_blank" >HBz_Archive</a> <span>on</span> <a href="https://hearthis.at/" target="_blank">hearthis.at</a></p></iframe>
 
-<iframe id="lbry-iframe" width="560" height="315" src="https://odysee.com/$/embed/hc33/a66cee62cfb1218d111e784982da0cd0824cab8a?r=DgzV1r6o8wsmEEG4g96yVhvmv6p27qo2" allowfullscreen></iframe>
+<iframe id="lbry-iframe" width="100%" height="auto" src="https://odysee.com/$/embed/hc33/a66cee62cfb1218d111e784982da0cd0824cab8a?r=DgzV1r6o8wsmEEG4g96yVhvmv6p27qo2" allowfullscreen></iframe>
 
-<iframe src="https://vivo.sx/embed/0c0d1d3dad" width="560" height="315" scrolling="no" frameborder="0" allowfullscreen></iframe>
+<iframe src="https://vivo.sx/embed/0c0d1d3dad" width="100%" height="auto" scrolling="no" frameborder="0" allowfullscreen></iframe>
 
-<iframe src="https://voe.sx/e/y8hxyfdrze2p" width="560" height="315" scrolling="no" frameborder="0" allowfullscreen></iframe>
+<iframe src="https://voe.sx/e/y8hxyfdrze2p" width="100%" height="auto" scrolling="no" frameborder="0" allowfullscreen></iframe>
