--- a/_posts/2021-05-22-hc36.md
+++ b/_posts/2021-05-22-hc36.md
@@ -14,8 +14,8 @@ thumb: img/hc36.jpg
 
 <iframe scrolling="no" id="hearthis_at_track_5938758" width="100%" height="150" src="https://app.hearthis.at/embed/5938758/transparent_black/?hcolor=&color=&style=2&block_size=2&block_space=1&background=1&waveform=0&cover=0&autoplay=0&css=" frameborder="0" allowtransparency allow="autoplay"><p>Listen to <a href="https://hearthis.at/hbzarchive/hc36/" target="_blank">HBz Home Clubbing #36 (S03E06)</a> <span>by</span><a href="https://hearthis.at/hbzarchive/" target="_blank" >HBz_Archive</a> <span>on</span> <a href="https://hearthis.at/" target="_blank">hearthis.at</a></p></iframe>
 
-<iframe id="lbry-iframe" width="560" height="315" src="https://odysee.com/$/embed/hc36/dde7ee482a163098b300c74fd135a95dbd3e36ee?r=DgzV1r6o8wsmEEG4g96yVhvmv6p27qo2" allowfullscreen></iframe>
+<iframe id="lbry-iframe" width="740" height="auto" src="https://odysee.com/$/embed/hc36/dde7ee482a163098b300c74fd135a95dbd3e36ee?r=DgzV1r6o8wsmEEG4g96yVhvmv6p27qo2" allowfullscreen></iframe>
 
-<iframe src="https://vivo.sx/embed/4a89ade58d" width="560" height="315" scrolling="no" frameborder="0" allowfullscreen></iframe>
+<iframe src="https://vivo.sx/embed/4a89ade58d" width="740" height="auto" scrolling="no" frameborder="0" allowfullscreen></iframe>
 
-<iframe src="https://voe.sx/e/m6thrt1unhii" width="560" height="315" scrolling="no" frameborder="0" allowfullscreen></iframe>
+<iframe src="https://voe.sx/e/m6thrt1unhii" width="740" height="auto" scrolling="no" frameborder="0" allowfullscreen></iframe>
