--- a/_posts/2021-05-29-hc37.md
+++ b/_posts/2021-05-29-hc37.md
@@ -14,8 +14,8 @@ thumb: img/hc37.jpg
 
 <iframe scrolling="no" id="hearthis_at_track_5953861" width="100%" height="150" src="https://app.hearthis.at/embed/5953861/transparent_black/?hcolor=&color=&style=2&block_size=2&block_space=1&background=1&waveform=0&cover=0&autoplay=0&css=" frameborder="0" allowtransparency allow="autoplay"><p>Listen to <a href="https://hearthis.at/hbzarchive/hc37/" target="_blank">HBz Home Clubbing #37 (S03E07)</a> <span>by</span><a href="https://hearthis.at/hbzarchive/" target="_blank" >HBz_Archive</a> <span>on</span> <a href="https://hearthis.at/" target="_blank">hearthis.at</a></p></iframe>
 
-<iframe id="lbry-iframe" width="560" height="315" src="https://odysee.com/$/embed/hc37/dcbefa7f7d85a87257c95bf95883f8f065fa28ae?r=DgzV1r6o8wsmEEG4g96yVhvmv6p27qo2" allowfullscreen></iframe>
+<iframe id="lbry-iframe" width="100%" height="auto" src="https://odysee.com/$/embed/hc37/dcbefa7f7d85a87257c95bf95883f8f065fa28ae?r=DgzV1r6o8wsmEEG4g96yVhvmv6p27qo2" allowfullscreen></iframe>
 
-<iframe src="https://vivo.sx/embed/7ca0407067" width="560" height="315" scrolling="no" frameborder="0" allowfullscreen></iframe>
+<iframe src="https://vivo.sx/embed/7ca0407067" width="100%" height="auto" scrolling="no" frameborder="0" allowfullscreen></iframe>
 
-<iframe src="https://voe.sx/e/i9h5a6o0ivsl" width="560" height="315" scrolling="no" frameborder="0" allowfullscreen></iframe>
+<iframe src="https://voe.sx/e/i9h5a6o0ivsl" width="100%" height="auto" scrolling="no" frameborder="0" allowfullscreen></iframe>
