--- a/_posts/2021-06-05-hc38.md
+++ b/_posts/2021-06-05-hc38.md
@@ -14,8 +14,8 @@ thumb: img/hc38.jpg
 
 <iframe scrolling="no" id="hearthis_at_track_5975658" width="100%" height="150" src="https://app.hearthis.at/embed/5975658/transparent_black/?hcolor=&color=&style=2&block_size=2&block_space=1&background=1&waveform=0&cover=0&autoplay=0&css=" frameborder="0" allowtransparency allow="autoplay"><p>Listen to <a href="https://hearthis.at/hbzarchive/hc38/" target="_blank"> HBz Home Clubbing #38 (S03E08)</a> <span>by</span><a href="https://hearthis.at/hbzarchive/" target="_blank" >HBz_Archive</a> <span>on</span> <a href="https://hearthis.at/" target="_blank">hearthis.at</a></p></iframe>
 
-<iframe id="lbry-iframe" width="560" height="315" src="https://odysee.com/$/embed/hc38/83b519ce28f4c857392bbc5576cf4cfc228fe2a6?r=DgzV1r6o8wsmEEG4g96yVhvmv6p27qo2" allowfullscreen></iframe>
+<iframe id="lbry-iframe" width="100%" height="auto" src="https://odysee.com/$/embed/hc38/83b519ce28f4c857392bbc5576cf4cfc228fe2a6?r=DgzV1r6o8wsmEEG4g96yVhvmv6p27qo2" allowfullscreen></iframe>
 
-<iframe src="https://vivo.sx/embed/0997a3f690" width="560" height="315" scrolling="no" frameborder="0" allowfullscreen></iframe>
+<iframe src="https://vivo.sx/embed/0997a3f690" width="100%" height="auto" scrolling="no" frameborder="0" allowfullscreen></iframe>
 
-<iframe src="https://voe.sx/e/y2ln43qr6dkv" width="560" height="315" scrolling="no" frameborder="0" allowfullscreen></iframe>
+<iframe src="https://voe.sx/e/y2ln43qr6dkv" width="100%" height="auto" scrolling="no" frameborder="0" allowfullscreen></iframe>
