--- a/_posts/2021-06-19-hc40.md
+++ b/_posts/2021-06-19-hc40.md
@@ -14,8 +14,8 @@ thumb: img/hc40.jpg
 
 <iframe scrolling="no" id="hearthis_at_track_6015562" width="100%" height="150" src="https://app.hearthis.at/embed/6015562/transparent_black/?hcolor=&color=&style=2&block_size=2&block_space=1&background=1&waveform=0&cover=0&autoplay=0&css=" frameborder="0" allowtransparency allow="autoplay"><p>Listen to <a href="https://hearthis.at/hbzarchive/hc40/" target="_blank"> HBz Home Clubbing #40 (S03E10)</a> <span>by</span><a href="https://hearthis.at/hbzarchive/" target="_blank" >HBz_Archive</a> <span>on</span> <a href="https://hearthis.at/" target="_blank">hearthis.at</a></p></iframe>
 
-<!--<iframe id="lbry-iframe" width="560" height="315" src="https://odysee.com/$/embed/hc39/b8b7492b10eb6180d1fd92bc2f92ecffd2a9b795?r=DgzV1r6o8wsmEEG4g96yVhvmv6p27qo2" allowfullscreen></iframe>-->
+<iframe id="lbry-iframe" width="100%" height="auto" src="https://odysee.com/$/embed/hc40/dc18af4d850b360de491540fb5dd9857ef5520ba?r=DgzV1r6o8wsmEEG4g96yVhvmv6p27qo2" allowfullscreen></iframe>
 
-<iframe src="https://vivo.sx/embed/64c557d546" width="560" height="315" scrolling="no" frameborder="0" allowfullscreen></iframe>
+<iframe src="https://vivo.sx/embed/64c557d546" width="100%" height="auto" scrolling="no" frameborder="0" allowfullscreen></iframe>
 
-<iframe src="https://voe.sx/e/hew4pn0d410q" width="560" height="315" scrolling="no" frameborder="0" allowfullscreen></iframe>
+<iframe src="https://voe.sx/e/hew4pn0d410q" width="100%" height="auto" scrolling="no" frameborder="0" allowfullscreen></iframe>
