change links; add lazy loading

--- a/_posts/2021-04-17-hc31.md
+++ b/_posts/2021-04-17-hc31.md
@@ -5,8 +5,14 @@ date:   2021-04-17 22:00:00 +0200
 categories: home-clubbing
 thumb: img/hc31.jpg
 ---
+<b>HBz Home Clubbing #31</b>
+<p>
+Stream free HBz Home Clubbing S03E01 #31. HBz Stream Archiv.<br>
+HBz Home Clubbing #31 in den Kammerlichtspielen in Celle
+</p>
+
 <h1>Download</h1>
-[MEGA](https://mega.nz/file/LOgyFD4a#eyoH4n_Ahn2ENpS4-AH0Zi4wfbkj5HCz-FcOhrpjU50){:target="_blank" class="dl-button mega"}
+[MEGA](https://bit.ly/36rHN7b){:target="_blank" class="dl-button mega"}
 [UPLOADED](http://ul.to/5lhwnsoq){:target="_blank" class="dl-button ul"}
 
 <h1>Stream</h1>
