--- a/_posts/2021-04-24-hc32.md
+++ b/_posts/2021-04-24-hc32.md
@@ -5,8 +5,14 @@ date:   2021-04-24 22:00:00 +0200
 categories: home-clubbing
 thumb: img/hc32.jpg
 ---
+<b>HBz Home Clubbing #32</b>
+<p>
+Stream free HBz Home Clubbing S03E02 #32. HBz Stream Archiv.<br>
+HBz Home Clubbing #32 im Pinguin Bowling & Bar in Celle
+</p>
+
 <h1>Download</h1>
-[MEGA](https://mega.nz/file/zGhkgZRD#Q2F8h3h9lbSFdb6TXcf28gnJ89IKsW618PNAKDXX_DY){:target="_blank" class="dl-button mega"}
+[MEGA](https://bit.ly/3yHAsMT){:target="_blank" class="dl-button mega"}
 [UPLOADED](http://ul.to/0lr6pfnq){:target="_blank" class="dl-button ul"}
 
 <h1>Stream</h1>
