--- a/_posts/2021-05-15-hc35.md
+++ b/_posts/2021-05-15-hc35.md
@@ -5,8 +5,14 @@ date:   2021-05-15 22:00:00 +0200
 categories: home-clubbing
 thumb: img/hc35.jpg
 ---
+<b>HBz Home Clubbing #35</b>
+<p>
+Stream free HBz Home Clubbing S03E05 #35. HBz Stream Archiv.<br>
+HBz Home Clubbing #35 im Celler Badeland in Celle
+</p>
+
 <h1>Download</h1>
-[MEGA](https://mega.nz/file/6KokBZpK#B51WcRUfBk4Zh_OwSmZLviVtAGU17kqKZWn4yQRLTFo){:target="_blank" class="dl-button mega"}
+[MEGA](https://bit.ly/3wwWNuY){:target="_blank" class="dl-button mega"}
 [UPLOADED](http://ul.to/dmnmcqc2){:target="_blank" class="dl-button ul"}
 
 <h1>Stream</h1>
