--- a/_posts/2021-05-22-hc36.md
+++ b/_posts/2021-05-22-hc36.md
@@ -5,8 +5,14 @@ date:   2021-05-22 22:00:00 +0200
 categories: home-clubbing
 thumb: img/hc36.jpg
 ---
+<b>HBz Home Clubbing #36</b>
+<p>
+Stream free HBz Home Clubbing S03E06 #36. HBz Stream Archiv.<br>
+HBz Home Clubbing #36 bei Niklas im Keller in Celle
+</p>
+
 <h1>Download</h1>
-[MEGA](https://mega.nz/file/SWgyHTJZ#d8NT2WqxM28oUroFuTua_hYgpDJKa1LOepcoxsxjZ8g){:target="_blank" class="dl-button mega"}
+[MEGA](https://bit.ly/3yM47V0){:target="_blank" class="dl-button mega"}
 [UPLOADED](http://ul.to/by0vz7m1){:target="_blank" class="dl-button ul"}
 
 <h1>Stream</h1>
