--- a/_posts/2021-05-29-hc37.md
+++ b/_posts/2021-05-29-hc37.md
@@ -5,8 +5,16 @@ date:   2021-05-29 22:00:00 +0200
 categories: home-clubbing
 thumb: img/hc37.jpg
 ---
+<b>HBz Home Clubbing #37</b>
+<p>
+Stream free HBz Home Clubbing S03E07 #37. HBz Stream Archiv.<br>
+HBz Home Clubbing #37 in einer Schule* in Celle<br>
+
+<i>*Wer weiß welche bitte an <a href="mailto:schule@hbzhc.tk">schule@hbzhc.tk</a></i>
+</p>
+
 <h1>Download</h1>
-[MEGA](https://mega.nz/file/CD50gbwI#WKonjFkTJrc60NTYmaH0Sh5aplcOwwAOZNKqEsRprKU){:target="_blank" class="dl-button mega"}
+[MEGA](https://bit.ly/3r23N27){:target="_blank" class="dl-button mega"}
 [UPLOADED](http://ul.to/ybkjxd3n){:target="_blank" class="dl-button ul"}
 
 <h1>Stream</h1>
