--- a/_posts/2021-06-05-hc38.md
+++ b/_posts/2021-06-05-hc38.md
@@ -5,8 +5,13 @@ date:   2021-06-05 22:00:00 +0200
 categories: home-clubbing
 thumb: img/hc38.jpg
 ---
+<b>HBz Home Clubbing #38</b>
+<p>
+Stream free HBz Home Clubbing S03E08 #38. HBz Stream Archiv.
+</p>
+
 <h1>Download</h1>
-[MEGA](https://mega.nz/file/uaog0DrL#NvsZ_18tB0Rt-7m9UVHdoTkqF7ZF2qqlfkcaIksT14E){:target="_blank" class="dl-button mega"}
+[MEGA](https://bit.ly/3wxjz5S){:target="_blank" class="dl-button mega"}
 [UPLOADED](http://ul.to/osnstrv5){:target="_blank" class="dl-button ul"}
 
 <h1>Stream</h1>
