--- a/_posts/2021-06-19-hc40.md
+++ b/_posts/2021-06-19-hc40.md
@@ -5,8 +5,13 @@ date:   2021-06-19 22:00:00 +0200
 categories: home-clubbing
 thumb: img/hc40.jpg
 ---
+<b>HBz Home Clubbing #40</b>
+<p>
+Stream free HBz Home Clubbing S03E10 #40. HBz Stream Archiv.
+</p>
+
 <h1>Download</h1>
-[MEGA](https://mega.nz/file/yP5ijSKa#c80f5Qme2pgyLz4D_tJ8fDo7RMt5tF3cSoTTUpVqGEM){:target="_blank" class="dl-button mega"}
+[MEGA](https://bit.ly/3xwtgTL){:target="_blank" class="dl-button mega"}
 [UPLOADED](http://ul.to/zon9aspz){:target="_blank" class="dl-button ul"}
 
 <h1>Stream</h1>
