--- a/_posts/2021-05-01-hc33.md
+++ b/_posts/2021-05-01-hc33.md
@@ -5,8 +5,14 @@ date:   2021-05-01 22:00:00 +0200
 categories: home-clubbing
 thumb: img/hc33.jpg
 ---
+<b>HBz Home Clubbing #33</b>
+<p>
+Stream free HBz Home Clubbing S03E03 #33. HBz Stream Archiv.<br>
+HBz Home Clubbing #33 in der Brauerei Carl Betz GmbH in Celle
+</p>
+
 <h1>Download</h1>
-[MEGA](https://mega.nz/file/6L5SSZYA#SP7KK12LOI5DUn9tVqjyohqNLLh-X8RgSvD05FA5F-w){:target="_blank" class="dl-button mega"}
+[MEGA](https://bit.ly/3wuI9o7){:target="_blank" class="dl-button mega"}
 [UPLOADED](http://ul.to/000fx5wm){:target="_blank" class="dl-button ul"}
 
 <h1>Stream</h1>
