--- a/_posts/2021-05-08-hc34.md
+++ b/_posts/2021-05-08-hc34.md
@@ -5,8 +5,14 @@ date:   2021-05-08 22:00:00 +0200
 categories: home-clubbing
 thumb: img/hc34.jpg
 ---
+<b>HBz Home Clubbing #34</b>
+<p>
+Stream free HBz Home Clubbing S03E04 #34. HBz Stream Archiv.<br>
+HBz Home Clubbing #34 im Miniatur Wunderland in Hamburg
+</p>
+
 <h1>Download</h1>
-[MEGA](https://mega.nz/file/aToyEbKD#I_TqCxZj8saE9XFjIZgUBUZ1KK9qLCDzhp-pdWefxF8){:target="_blank" class="dl-button mega"}
+[MEGA](https://bit.ly/3k7DyWm){:target="_blank" class="dl-button mega"}
 [UPLOADED](http://ul.to/vjhmeh5i){:target="_blank" class="dl-button ul"}
 
 <h1>Stream</h1>
