--- a/_posts/2021-06-12-hc39.md
+++ b/_posts/2021-06-12-hc39.md
@@ -5,8 +5,14 @@ date:   2021-06-12 22:00:00 +0200
 categories: home-clubbing
 thumb: img/hc39.jpg
 ---
+<b>HBz Home Clubbing #39</b>
+<p>
+Stream free HBz Home Clubbing S03E09 #39. HBz Stream Archiv.<br>
+HBz Home Clubbing #39 im Pinguin Bowling & Bar in Celle
+</p>
+
 <h1>Download</h1>
-[MEGA](https://mega.nz/file/WDxGEbSQ#c8Jr30eFf7REQAqr0RQKDwp5IeMM_XxxfhQzVMQu1Gc){:target="_blank" class="dl-button mega"}
+[MEGA](https://bit.ly/3hBoe2R){:target="_blank" class="dl-button mega"}
 [UPLOADED](http://ul.to/i95actsx){:target="_blank" class="dl-button ul"}
 
 <h1>Stream</h1>
