remove broken uploaded links

--- a/_posts/2022-02-12-hc41.md
+++ b/_posts/2022-02-12-hc41.md
@@ -11,8 +11,7 @@ Stream free HBz Home Clubbing S04E01 #41. HBz Stream Archiv.
 </p>
 
 <h1>Download</h1>
-<!--[MEGA](https://bit.ly/3xwtgTL){:target="_blank" class="dl-button mega"}
-[UPLOADED](http://ul.to/zon9aspz){:target="_blank" class="dl-button ul"}-->
+<!--[MEGA](https://bit.ly/3xwtgTL){:target="_blank" class="dl-button mega"}-->
 
 <h1>Stream</h1>
 <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2FHBz_Archive%2F12022022-hbz-home-clubbing-41-s04e01%2F" frameborder="0" ></iframe>
