--- a/_posts/2022-02-19-hc42.md
+++ b/_posts/2022-02-19-hc42.md
@@ -11,8 +11,7 @@ Stream free HBz Home Clubbing S04E02 #42. HBz Stream Archiv.
 </p>
 
 <h1>Download</h1>
-<!--[MEGA](https://bit.ly/3xwtgTL){:target="_blank" class="dl-button mega"}
-[UPLOADED](http://ul.to/zon9aspz){:target="_blank" class="dl-button ul"}-->
+<!--[MEGA](https://bit.ly/3xwtgTL){:target="_blank" class="dl-button mega"}-->
 
 <h1>Stream</h1>
 <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2FHBz_Archive%2F19022022-hbz-home-clubbing-42-s04e02%2F" frameborder="0" ></iframe>
