--- a/_posts/2021-04-17-hc31.md
+++ b/_posts/2021-04-17-hc31.md
@@ -12,7 +12,7 @@ HBz Home Clubbing #31 in den Kammerlichtspielen in Celle
 </p>
 
 <h1>Download</h1>
-[MEGA](https://bit.ly/36rHN7b){:target="_blank" class="dl-button mega"}
+[MEGA](https://bit.ly/36rHN7b){:target="_blank" class="dl-button mega" rel="nofollow"}
 
 <h1>Stream</h1>
 <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2FHBz_Archive%2F17042021-hbz-home-clubbing-s03e01-hc31%2F" frameborder="0" ></iframe>
