--- a/_posts/2021-04-24-hc32.md
+++ b/_posts/2021-04-24-hc32.md
@@ -12,7 +12,7 @@ HBz Home Clubbing #32 im Pinguin Bowling & Bar in Celle
 </p>
 
 <h1>Download</h1>
-[MEGA](https://bit.ly/3yHAsMT){:target="_blank" class="dl-button mega"}
+[MEGA](https://bit.ly/3yHAsMT){:target="_blank" class="dl-button mega" rel="nofollow"}
 
 <h1>Stream</h1>
 <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2FHBz_Archive%2F24042021-hbz-home-clubbing-s03e02-hc32%2F" frameborder="0" ></iframe>
