--- a/_posts/2021-05-15-hc35.md
+++ b/_posts/2021-05-15-hc35.md
@@ -12,7 +12,7 @@ HBz Home Clubbing #35 im Celler Badeland in Celle
 </p>
 
 <h1>Download</h1>
-[MEGA](https://bit.ly/3wwWNuY){:target="_blank" class="dl-button mega"}
+[MEGA](https://bit.ly/3wwWNuY){:target="_blank" class="dl-button mega" rel="nofollow"}
 
 <h1>Stream</h1>
 <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2FHBz_Archive%2F15052021-hbz-home-clubbing-35-s03e05%2F" frameborder="0" ></iframe>
