--- a/_posts/2021-05-29-hc37.md
+++ b/_posts/2021-05-29-hc37.md
@@ -14,7 +14,7 @@ HBz Home Clubbing #37 in einer Schule* in Celle<br>
 </p>
 
 <h1>Download</h1>
-[MEGA](https://bit.ly/3r23N27){:target="_blank" class="dl-button mega"}
+[MEGA](https://bit.ly/3r23N27){:target="_blank" class="dl-button mega" rel="nofollow"}
 
 <h1>Stream</h1>
 <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2FHBz_Archive%2F29052021-hbz-home-clubbing-37-s03e07%2F" frameborder="0" ></iframe>
