--- a/_posts/2021-06-05-hc38.md
+++ b/_posts/2021-06-05-hc38.md
@@ -11,7 +11,7 @@ Stream free HBz Home Clubbing S03E08 #38. HBz Stream Archiv.
 </p>
 
 <h1>Download</h1>
-[MEGA](https://bit.ly/3wxjz5S){:target="_blank" class="dl-button mega"}
+[MEGA](https://bit.ly/3wxjz5S){:target="_blank" class="dl-button mega" rel="nofollow"}
 
 <h1>Stream</h1>
 <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2FHBz_Archive%2F05062021-hbz-home-clubbing-38-s03e08%2F" frameborder="0" ></iframe>
