--- a/_posts/2022-02-12-hc41.md
+++ b/_posts/2022-02-12-hc41.md
@@ -7,11 +7,15 @@ thumb: img/hc41.jpg
 ---
 <b>HBz Home Clubbing #41</b>
 <p>
-Stream free HBz Home Clubbing S04E01 #41. HBz Stream Archiv.
+Stream free HBz Home Clubbing S04E01 #41. HBz Stream Archiv.  <br>
+<i>
+Leider fehlt die erste Stunde und das Audio hört sich leicht verzerrt an. <br>  
+Wer eine bessere Version hat bitte eine E-Mail an: hc41@hbzhc.tk
+</i>
 </p>
 
 <h1>Download</h1>
-<!--[MEGA](https://bit.ly/3xwtgTL){:target="_blank" class="dl-button mega"}-->
+<!--[MEGA](https://bit.ly/3xwtgTL){:target="_blank" class="dl-button mega" rel="nofollow"}-->
 
 <h1>Stream</h1>
 <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2FHBz_Archive%2F12022022-hbz-home-clubbing-41-s04e01-2%2F" frameborder="0" ></iframe>
