--- a/_posts/2022-02-19-hc42.md
+++ b/_posts/2022-02-19-hc42.md
@@ -7,11 +7,14 @@ thumb: img/hc42.jpg
 ---
 <b>HBz Home Clubbing #42</b>
 <p>
-Stream free HBz Home Clubbing S04E02 #42. HBz Stream Archiv.
+Stream free HBz Home Clubbing S04E02 #42. HBz Stream Archiv.<br>
+<i>
+Leider fehlt die erste Stunde.
+</i>
 </p>
 
 <h1>Download</h1>
-<!--[MEGA](https://bit.ly/3xwtgTL){:target="_blank" class="dl-button mega"}-->
+<!--[MEGA](https://bit.ly/3xwtgTL){:target="_blank" class="dl-button mega" rel="nofollow"}-->
 
 <h1>Stream</h1>
 <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&feed=%2FHBz_Archive%2F12022022-hbz-home-clubbing-41-s04e01%2F" frameborder="0" ></iframe>
